# kaggle_autoreseach

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: challenge_info.py  custom_dcode_agent.py  dcode.py  graph.py  kaggle_docs_scrape.py  llm_calls.py  llms.py  main.py  metrics_graph.py  preprocessing_graph.py  prompts.py  report.py  research.py  runner.py  utils.py
src/schemas/: CodeResultModel.py  DataPreprocessingPlan.py  ExperimentPlan.py  MLResearchPlan.py
tests/: test_challenge_info.py  test_runner.py  test_utils.py
