[project]
name = "kaggle-autoresearch"
version = "0.1.0"
description = "Agentic pipeline that researches, preprocesses, implements, and reports on Kaggle competitions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "kaggle>=1.6",
  "deepagents>=0.6",
  "langgraph>=1.0",
  "langchain-core>=1.0",
  "langchain-community>=0.4",
  "langchain-anthropic>=1.0",
  "langchain-ollama>=1.0",
  "langchain-openai>=1.0",
]

[project.optional-dependencies]
dcode = [
  "deepagents-code>=0.1",
  "langchain-experimental>=0.4",
]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
